--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production --base-href /angular-ci/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:angular-ci": "node dist/angular-ci/server/server.mjs"
